# TalkMe

./: .gitignore  AGENTS.md  BuildPerfCpp_trace_20260214_084251.etl  CHANGELOG.md  CMakeLists.txt  CURSOR.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY_AUDIT.md  SECURITY_AUDIT_UI.md  ScreenRecording.rc  ScreenRecording.vcxproj  TalkMe.rc  TalkMe.slnx  TalkMe.vcxproj  TalkMe.vcxproj.filters  Version.h  build.ps1  imgui.ini  resource.h  vcpkg.json
.githooks/: README.md  prepare-commit-msg
docs/: MESSENGER_DESIGN_REVIEW.md  VOICE_DEBUG.md  VOICE_STACK_ARCHITECTURE.md  VOICE_TRACE_QUALITY_SPEC.md
server/: Protocol.h  server.cpp
server/src/: ChatSession.cpp  ChatSession.h  Crypto.cpp  Crypto.h  Database.cpp  Database.h  Logger.h  Protocol.h  TalkMeServer.cpp  TalkMeServer.h  main.cpp
server_code/: ChatSession.cpp  Crypto.cpp  Database.cpp  Logger.cpp  Protocol.h  TalkMeServer.cpp  TalkMeServer.h
src/app/: AppGraphics.cpp  AppGraphics.h  AppSounds.cpp  AppSounds.h  AppWindow.cpp  AppWindow.h  Application.cpp  Application.h  ApplicationEchoLive.cpp  ApplicationLinkProbe.cpp  ApplicationNetwork.cpp  ResourceLimits.h  ScreenShareFunctions.cpp  VoiceSendPacer.cpp  VoiceSendPacer.h  main.cpp  screen_capture_main.cpp
src/audio/: AudioEngine.cpp  AudioEngine.h  AudioEngineDevice.cpp  AudioEngineDevice.h  AudioEngineEncode.cpp  AudioEngineInternal.h  AudioEnginePlayback.cpp  AudioEnginePlayback.h  AudioEngineTelemetry.cpp  NativeAudioProcessor.cpp  NativeAudioProcessor.h  OpusCodec.cpp  OpusCodec.h  Soundboard.h
src/core/: ConfigManager.h  Globals.h  Logger.cpp  Logger.h  Secrets.cpp  Secrets.h
src/game/: Chess.h  FlappyBird.h  Racing.h  TicTacToe.h
src/network/: ImageCache.cpp  ImageCache.h  KlipyGifProvider.cpp  KlipyGifProvider.h  NetworkClient.cpp  NetworkClient.h  PacketHandler.h  TenorAPI.cpp  TenorAPI.h  VoiceTransport.cpp  VoiceTransport.h
src/overlay/: GameOverlay.cpp  GameOverlay.h
src/screen/: AudioLoopback.cpp  AudioLoopback.h  ColorConversion.cso  ColorConversion_bytecode.h  DXGICapture.h  (+9 more)
(+27 files in other folders)
